--- a/style.css
+++ b/style.css
@@ -6,15 +6,29 @@ body {
 .hero {
     background-color: grey;
     background-image: url("images/girl_sipping_alcohol_beach.jpeg");
-    color: black;
+    color: white;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-blend-mode: multiply;
-
     padding-top: 400px;
     padding-bottom: 200px;
 }
+
+@media (width <=750px) {
+    .hero {
+        background-color: grey;
+        background-image: url("images/girl_sipping_alcohol_beach.jpeg");
+        color: black;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        background-blend-mode: multiply;
+        padding-top: 200px;
+        padding-bottom: 100px;
+    }
+}
+
 
 .container {
     text-align: right;
