--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     font-family: system-ui;
+    background-color: grey;
 }
 
 .hero {
@@ -21,11 +22,11 @@ body {
         background-image: url("images/girl_sipping_alcohol_beach.jpeg");
         color: black;
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: auto;
         background-position: center;
         background-blend-mode: multiply;
         padding-top: 200px;
-        padding-bottom: 100px;
+        padding-bottom: 200px;
     }
 }
 
